feat: admin pages

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LMS",
-  "name": "LMS",
+  "short_name": "MDF",
+  "name": "MDF",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
