--- a/package.json
+++ b/package.json
@@ -22,20 +22,26 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "@next/third-parties": "^15.1.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.62.7",
-    "@tiptap/core": "^2.11.3",
-    "@tiptap/extension-bold": "^2.11.3",
-    "@tiptap/extension-bullet-list": "^2.11.3",
-    "@tiptap/extension-heading": "^2.11.3",
-    "@tiptap/extension-image": "^2.11.3",
-    "@tiptap/extension-italic": "^2.11.3",
-    "@tiptap/extension-list-item": "^2.11.3",
-    "@tiptap/extension-ordered-list": "^2.11.3",
-    "@tiptap/extension-text-align": "^2.11.3",
-    "@tiptap/extension-text-style": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
+    "@tiptap/core": "2.11.3",
+    "@tiptap/extension-bold": "2.11.3",
+    "@tiptap/extension-bullet-list": "2.11.3",
+    "@tiptap/extension-code-block": "2.12.0",
+    "@tiptap/extension-color": "2.12.0",
+    "@tiptap/extension-font-size": "3.0.0-next.3",
+    "@tiptap/extension-heading": "2.11.3",
+    "@tiptap/extension-image": "2.11.3",
+    "@tiptap/extension-italic": "2.11.3",
+    "@tiptap/extension-link": "2.11.9",
+    "@tiptap/extension-list-item": "2.11.3",
+    "@tiptap/extension-ordered-list": "2.11.3",
+    "@tiptap/extension-text-align": "2.11.3",
+    "@tiptap/extension-text-style": "2.11.3",
+    "@tiptap/extension-underline": "2.23.1",
+    "@tiptap/react": "2.11.3",
+    "@tiptap/starter-kit": "2.11.3",
     "antd": "^5.22.4",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
@@ -46,8 +52,10 @@
     "next": "14.1.3",
     "next-themes": "^0.4.4",
     "path-to-regexp": "^8.2.0",
+    "radix-ui": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-toastify": "^10.0.6",
     "sass": "^1.83.0",
