--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "radix-ui": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
-    "react-toastify": "^10.0.6",
     "sass": "^1.83.0",
     "sharp": "^0.33.5",
     "socket.io-client": "^4.8.1",
